* Discard missing menu items instead of displaying them in the editor. * Ensure template_id is always set, never default. Custom menus now have template_id equal to the empty string. * Read field defaults from the menu item instead of storing each default with each individual field. * It is now possible for a field to have no default value at all. * Made the template field visible for debugging; still needs proper UI.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@539410 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -211,8 +211,9 @@ a.ws_edit_link:hover {
 	color: gray;
 }
 
-/* No reset button for fields set to the default value */ 
-.ws_input_default .ws_reset_button {
+/* No reset button for fields set to the default value and fields without a default value */
+.ws_input_default  .ws_reset_button,
+.ws_has_no_default .ws_reset_button {
 	visibility: hidden;
 }
 
@@ -340,11 +341,6 @@ to accomodate the dropdown button.
 	background-image: url('../images/page_white_add.png');
 }
 
-/* items not present in the default menu */
-.ws_missing_flag {
-	background-image: url('../images/plugin_error.png');
-}
-
 /* unused items - those that are in the default menu but not in the custom one */
 .ws_unused_flag {
 	background-image: url('../images/plugin_add.png');
@@ -356,7 +352,6 @@ to accomodate the dropdown button.
 }
 
 /* These classes could be used to apply different styles to items depending on their flags */
-.ws_missing { } 
 .ws_custom { }
 .ws_hidden { }
 .ws_unused { }
